@@ -1,5 +1,9 @@
 Changelog for GEMC
 
+11/17/15
+- accessing CCDB database in ftof digitization routine
+
+
 11/16/15
 - default runNo set to 1 (fixed case when in GUI mode a different runno was set)
 - added COSMICAREA option to define the area where the cosmic ray will go through,
